<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/activity_wemo"
        android:orderInCategory="100"
        android:title="@string/title_activity_wemo_control"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/activity_remote_switch"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/title_activity_remote_switch_bricklet"-->
        <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/activity_outlets"
        android:orderInCategory="100"
        android:title="@string/title_activity_outlet_control"
        app:showAsAction="never" />

    <item
        android:id="@+id/activity_leds"
        android:orderInCategory="100"
        android:title="@string/title_activity_led_control"
        app:showAsAction="never" />

</menu>