<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/host" />

            <EditText android:id="@+id/host_ip"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/host_ip_edit"
                android:hint="@string/host_ip_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/port" />

            <EditText android:id="@+id/port"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/port_edit"
                android:hint="@string/port_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/uid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/uid" />

            <EditText android:id="@+id/uid_edit"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uid_edit"
                android:hint="@string/uid_edit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button android:id="@+id/toggle_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle" />

            <TextView android:id="@+id/toggle_current_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="On/Off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R:"/>

            <EditText
                android:id="@+id/rValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="G:"/>

            <EditText
                android:id="@+id/gValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="B:"/>

            <EditText
                android:id="@+id/bValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:id="@+id/house_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:text="@string/house_code" />

            <EditText android:id="@+id/house_code_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="13"
                android:text="@string/house_code_edit"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button android:id="@+id/outlet_1_toggle"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outlet_1" />

            <Button android:id="@+id/outlet_2_toggle"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outlet_2" />

            <Button android:id="@+id/outlet_3_toggle"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outlet_3" />

            <Button android:id="@+id/outlet_4_toggle"
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outlet_4" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical">-->

                <!--<EditText-->
                    <!--android:id="@+id/rValue"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="0"/>-->

                <!--<EditText-->
                    <!--android:id="@+id/gValue"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="0"/>-->

                <!--<EditText-->
                    <!--android:id="@+id/bValue"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="0"/>-->

            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<com.chiralcode.colorpicker.ColorPicker-->
                    <!--android:id="@+id/colorPicker"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content" />-->

            <!--</LinearLayout>-->



            <!--<SeekBar-->
                <!--android:id="@+id/redSeekBar"-->
                <!--android:layout_width="300dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_marginTop="26dp"-->
                <!--android:max="255"/>-->

        </LinearLayout>

        <!--<LinearLayout-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->



            <!--<SeekBar-->
                <!--android:id="@+id/greenSeekBar"-->
                <!--android:layout_width="300dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_marginTop="26dp"-->
                <!--android:max="255"/>-->

        <!--</LinearLayout>-->

    </LinearLayout>



</LinearLayout>